--- a/client/app/layout/layout.html
+++ b/client/app/layout/layout.html
@@ -36,18 +36,19 @@
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
-            <ul class="nav navbar-nav navbar-right sign-in">
+            <ul class="nav navbar-nav navbar-right ng-class='{sign-in:true}'">
                 <li>
-                    <a href="#" ng-click="vm.openModal('#signIn')">Sign In </a>
-                    <!--<ul class="dropdown-menu">-->
-                        <!--<li><a href="#">Action</a></li>-->
-                        <!--<li><a href="#">Another action</a></li>-->
-                        <!--<li><a href="#">Something else here</a></li>-->
-                        <!--<li role="separator" class="divider"></li>-->
-                        <!--<li><a href="#">Separated link</a></li>-->
-                    <!--</ul>-->
+                    <a href="#" ng-click="vm.openModal('#signIn')" ng-show="false">Sign In </a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-show="true"> My Account <span class="caret"></span></a>
+                    <ul class="dropdown-menu" >
+                        <li><a ui-sref="shareeconomy.shoppingCart">Shopping Cart</a></li>
+                        <li><a href="#">Wish List</a></li>
+                        <li><a href="#">Waiting List</a></li>
+                        <li class="divider"></li>
+                        <li><a ui-sref="shareeconomy.myAccount">Manage Account</a></li>
+                    </ul>
                 </li>
-                <li>
+                <li >
                     <a href="#" ng-click="vm.openModal('#register')">Create Account</a>
                 </li>
             </ul>
@@ -78,7 +79,7 @@
 </div>
 
 <div style="clear:both;margin-top:100px">
-    <nav class="navbar navbar-default" style="background-color:#777;margin-bottom:0px">
+    <nav class="navbar navbar-default" style="background-color:#777;margin-bottom:0px;margin-top:30px;width:100%">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#" style="color:white;font-size: 15px">
