--- a/client/style/app.css
+++ b/client/style/app.css
@@ -129,11 +129,33 @@ a:hover{
     margin-top: 5px;
     overflow:visible !important;
 }
-.control-panel .glyphicon{
+.wish-board {
+    background-color: #f6f6f6;
+    position: fixed;
+    right:30px;
+    padding:10px 10px;
+    color:#b3b3b3
+}
+.wish-board.glyphicon{
     color:#337ab7;
-    display: block;
+    /*display: block;*/
     margin-top: 10px;
 }
+.wish-board ul{
+    list-style: none;
+    padding-left:0px;
+    margin-left: 0px
+}
+.wish-board ul li{
+    margin-bottom: 5px;
+}
+/*.control-panel ul li:before {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    content: "\e080";
+}*/
 .shopping-cart .glyphicon-minus-sign{
     color:#db524b;
 }
