--- a/client/style/app.css
+++ b/client/style/app.css
@@ -123,7 +123,7 @@ a:hover{
     width:200px;
     font-size: 12px;
 }
-.owned-items .progress{
+.progress{
     padding:0px 0px;
     height:20px;
     margin-top: 5px;
