create new Features

--- a/client/app/feature/layout/layout.html
+++ b/client/app/feature/layout/layout.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default " style="background-color:#777">
+<nav class="navbar navbar-default " style="background-color:#777;">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div>
@@ -44,7 +44,7 @@
                         <li><a ui-sref="shareeconomy.shoppingCart">Shopping Cart</a></li>
                         <li><a ui-sref='shareeconomy.wishList'>Wish List</a></li>
                         <li><a href="#">Waiting List</a></li>
-                        <li><a ui-sref='shareeconomy.ownedItems'>Your Items</a></li>
+                        <li><a ui-sref='shareeconomy.ownedItems'>Dashboard</a></li>
                         <li class="divider"></li>
                         <li><a ui-sref="shareeconomy.myAccount">Manage Account</a></li>
                     </ul>
@@ -88,7 +88,7 @@
 </div>
 
 <div style="clear:both;margin-top:50px;">
-    <nav class="navbar navbar-default" style="position:fixed;bottom:0px;background-color:#777;margin-bottom:0px;margin-top:30px;width:100%;z-index: 1000">
+    <nav class="navbar navbar-default" style="position:fixed;bottom:0px;background-color:#777;margin-bottom:0px;margin-top:30px;width:100%;">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#" style="color:white;font-size: 15px">
