--- a/client/app/feature/layout/layout.html
+++ b/client/app/feature/layout/layout.html
@@ -1,100 +1,105 @@
-<nav class="navbar navbar-default " style="background-color:#777;">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div>
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"  aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" ui-sref="shareeconomy.home"><span class="glyphicon glyphicon-leaf" style="font-size: 20px"></span></a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
-            <!-- <ul class="nav navbar-nav ">
-                <li ng-class="{'active': vm.link1Active === true}" ng-click="vm.link1Active = true;vm.link2Active=false;vm.link3Active=false"><a href="#">Link1</a></li>
-                <li ng-class="{'active': vm.link2Active === true}" ng-click="vm.link2Active = true;vm.link1Active=false;vm.link3Active=false"><a href="#">Link2</a></li>
-                <li ng-class="{'active': vm.link3Active === true}" ng-click="vm.link3Active = true;vm.link1Active=false;vm.link2Active=false"><a href="#">Link3</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li ><a href="#" >One more separated link</a></li>
-                    </ul>
-                </li>
-            </ul> -->
-            <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right ng-class='{sign-in:true}'">
-                <li>
-                    <a href="#" ng-click="vm.openModal('#signIn')" ng-show="false">Sign In </a>
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-show="true"> My Account <span class="caret"></span></a>
-                    <ul class="dropdown-menu" >
-                        <li><a ui-sref="shareeconomy.shoppingCart">Shopping Cart</a></li>
-                        <li><a ui-sref='shareeconomy.wishList'>Wish List</a></li>
-                        <li><a ui-sref='shareeconomy.waitList'>Waiting List</a></li>
-                        <li><a ui-sref='shareeconomy.ownedItems'>Dashboard</a></li>
-                        <li class="divider"></li>
-                        <li><a ui-sref="shareeconomy.myAccount">Manage Account</a></li>
-                    </ul>
-                </li>
-                <li >
-                    <a href="#" ng-click="vm.openModal('#register')">Create Account</a>
-                </li>
-                <li >
-                    <a href="#" ui-sref='shareeconomy.messageCenter.inbox'>
-                        <span class="glyphicon glyphicon-envelope" style="font-size: 17px"><span class="badge" style="color:brown;font-size: 14px;">4</span></span>
-                    </a>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-<!-- <div 
-     style="background-image: url(../server/public/picture/fish.jpg);height:400px;background-size:cover;margin-top: -20px;margin-bottom:100px">
-</div> -->
-<div  ui-view autoscroll="true"></div>
-<br>
-
-<div class="lightbox-container" >
-    <snap-lightbox
-            box-id = "signIn"
-            box-type = "top">
-        <span class="glyphicon glyphicon-remove" style="float:right;cursor: pointer;" ng-click="vm.closeModal('#signIn')"></span>
-        <div class="lightbox-body" ng-include="'app/feature/layout/modal/signInModal.html'"></div>
-
-    </snap-lightbox>
-</div>
-<div class="lightbox-container" >
-    <snap-lightbox
-            box-id = "register"
-            box-type = "right"
-            right-class='col-lg-4'>
-        <span class="glyphicon glyphicon-remove" style="float:right;cursor: pointer;" ng-click="vm.closeModal('#register')"></span>
-        <div class="lightbox-body" ng-include="'app/feature/layout/modal/registerModal.html'"></div>
-
-    </snap-lightbox>
-</div>
-
-<div style="clear:both;margin-top:50px;">
-    <nav class="navbar navbar-default" style="position:fixed;bottom:0px;background-color:#777;margin-bottom:0px;margin-top:30px;width:100%;">
+<div ng-init="vm.init()">
+    <nav class="navbar navbar-default " style="background-color:#777;">
         <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#" style="color:white;font-size: 15px">
-                    Edited by Moyu Liang
-                </a>
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"  aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" ui-sref="shareeconomy.home"><span class="glyphicon glyphicon-leaf" style="font-size: 20px"></span></a>
             </div>
-        </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
+                <!-- <ul class="nav navbar-nav ">
+                    <li ng-class="{'active': vm.link1Active === true}" ng-click="vm.link1Active = true;vm.link2Active=false;vm.link3Active=false"><a href="#">Link1</a></li>
+                    <li ng-class="{'active': vm.link2Active === true}" ng-click="vm.link2Active = true;vm.link1Active=false;vm.link3Active=false"><a href="#">Link2</a></li>
+                    <li ng-class="{'active': vm.link3Active === true}" ng-click="vm.link3Active = true;vm.link1Active=false;vm.link2Active=false"><a href="#">Link3</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li ><a href="#" >One more separated link</a></li>
+                        </ul>
+                    </li>
+                </ul> -->
+                <form class="navbar-form navbar-left" role="search">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+                <ul class="nav navbar-nav navbar-right ng-class='{sign-in:true}'">
+                    <li>
+                        <a ui-sref='signIn' ng-show="!vm.isUser">Sign In </a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-show="vm.isUser"> {{vm.userName}} <span class="caret"></span></a>
+                        <ul class="dropdown-menu" >
+                            <li><a ui-sref="shareeconomy.shoppingCart">Shopping Cart</a></li>
+                            <li><a ui-sref='shareeconomy.wishList'>Wish List</a></li>
+                            <li><a ui-sref='shareeconomy.waitList'>Waiting List</a></li>
+                            <li><a ui-sref='shareeconomy.ownedItems'>Dashboard</a></li>
+                            <li class="divider"></li>
+                            <li><a ui-sref="shareeconomy.myAccount">Manage Account</a></li>
+                        </ul>
+                    </li>
+                    <li >
+                        <a ui-sref="registerAccount" ng-show="!vm.isUser">Create Account</a>
+                    </li>
+                    <li >
+                        <a ui-sref="signIn" ng-show="vm.isUser" ng-click="vm.logout()">Log out</a>
+                    </li>
+                    <!--<li >-->
+                        <!--<a href="#" ui-sref='shareeconomy.messageCenter.inbox'>-->
+                            <!--<span class="glyphicon glyphicon-envelope" style="font-size: 17px"><span class="badge" style="color:brown;font-size: 14px;">4</span></span>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
     </nav>
+    <!-- <div
+         style="background-image: url(../server/public/picture/fish.jpg);height:400px;background-size:cover;margin-top: -20px;margin-bottom:100px">
+    </div> -->
+    <div  ui-view ></div>
+    <br>
+
+    <div class="lightbox-container" >
+        <snap-lightbox
+                box-id = "signIn"
+                box-type = "top">
+            <span class="glyphicon glyphicon-remove" style="float:right;cursor: pointer;" ng-click="vm.closeModal('#signIn')"></span>
+            <div class="lightbox-body" ng-include="'app/feature/layout/modal/signInModal.html'"></div>
+
+        </snap-lightbox>
+    </div>
+    <div class="lightbox-container" >
+        <snap-lightbox
+                box-id = "register"
+                box-type = "right"
+                right-class='col-lg-4'>
+            <span class="glyphicon glyphicon-remove" style="float:right;cursor: pointer;" ng-click="vm.closeModal('#register')"></span>
+            <div class="lightbox-body" ng-include="'app/feature/layout/modal/registerModal.html'"></div>
+
+        </snap-lightbox>
+    </div>
+
+    <div style="clear:both;">
+        <nav class="navbar navbar-default" style="position:fixed;bottom:0px;background-color:#777;margin-bottom:0px;width:100%;">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#" style="color:white;font-size: 15px">
+                        Edited by Moyu Liang
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </div>
 </div>
