--- a/client/style/app.css
+++ b/client/style/app.css
@@ -4,6 +4,11 @@ body html{
     padding:0 0;
     overflow: hidden;
 }
+.search-area{
+    box-shadow: 0 1px 3px #C6C7C7;
+    background-color: #EEEFEF;
+    padding: 20px 20px
+}
 .navbar{
     margin-bottom: 0px;
 }
@@ -71,9 +76,31 @@ a:hover{
     text-decoration: none;
     color:#337ab7;
 }
+label{
+    color:#777;
+    font-size: 13px;
+    padding:3px 5px;
+    border-radius: 1px;
+}
+.label-active{
+    color:white;
+    background-color:#555;
+}
 .home-page .list-group > li:hover{
     background-color:#f7f7f7;
     cursor:pointer;
+}
+.tab{
+    background-color: #f7f7f7;
+}
+.tab>ul>li{
+    font-size: 16px;
+    padding: 20px 20px;
+    float:left;
+}
+.tab > ul > li:hover{
+    cursor:pointer;
+    border-bottom: 2px solid #337ab7;
 }
 .div-center {
     float:none;
@@ -381,5 +408,25 @@ a:hover{
     font-size: 18px;
     margin-bottom: 20px; }
 
+/*ng-show animation*/
+.animate-show {
+    line-height: 20px;
+    padding: 10px;
+}
 
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
+    transition: all linear 0.5s;
+}
+
+.animate-show.ng-hide {
+    line-height: 0;
+    opacity: 0;
+    padding: 0 10px;
+}
+
+.check-element {
+    padding: 10px;
+    border: 1px solid black;
+    background: white;
+}
 
