--- a/client/app/feature/layout/layout.html
+++ b/client/app/feature/layout/layout.html
@@ -106,7 +106,7 @@
          style="background-image: url(../server/public/picture/fish.jpg);height:400px;background-size:cover;margin-top: -20px;margin-bottom:100px">
     </div> -->
     &nbsp;
-    <div  ui-view ></div>
+    <div  ui-view style="" class="div-center"></div>
     <br>
 
     <div class="lightbox-container" >
