--- a/client/app/feature/layout/layout.html
+++ b/client/app/feature/layout/layout.html
@@ -96,12 +96,12 @@
         </div>
         <button class="btn btn-info btn-xl" style="float:right" ng-click="vm.saveSearchArea()">Save</button>
     </section>
-    <div class="col-lg-12 tab">
+    <!-- <div class="col-lg-12 tab">
         <ul style="list-style-type: none;padding:0px 0px">
             <li>REAL ITEMS</li>
             <li>VIRTUAL ITEMS</li>
         </ul>
-    </div>
+    </div> -->
     <!-- <div
          style="background-image: url(../server/public/picture/fish.jpg);height:400px;background-size:cover;margin-top: -20px;margin-bottom:100px">
     </div> -->
